# db-chat

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: test-and-coverage.yml
db_chat/: __init__.py  apps.py  components.py  constants.py  consumers.py  db_executor.py  embeddings.py  error_handlers.py  helpers.py  llm_adapter.py  model_registry.py  prompts.py  routing.py  services.py  storage.py  urls.py  utils.py  views.py
db_chat/connectors/: base.py
db_chat/connectors/handlers/: base.py
db_chat/connectors/postgres/: pg_connector.py  pg_handler.py  queries.py
db_chat/tests/: test_base_connector.py  test_base_handler.py  test_consumers.py  test_db_executor.py  test_llm_adapter.py  test_model_registry.py  test_pg_connector.py  test_pg_handler.py  test_prompts.py  test_routing.py  test_services.py  test_settings.py  test_storage.py  test_urls.py  test_utils.py  test_views.py
db_chat_project/: asgi.py  settings.py  urls.py  wsgi.py
